added bootstrap, restructured app styling for current project, added page routes for home, about, 404

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
+/*************************************/
+/********** Site Styles ***********/
+/*************************************/
+
+body {
+  background-color: #ffffff;
+  color: #2e333f;
+  height: calc(100vh);
+}
+
 .App {
   text-align: center;
+  height: calc(100vh);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Header */
+header {
+  background-color: #d58dde;
+  background-image: linear-gradient(to bottom right ,#7c25cc, #da42e0);
+  color: #ffffff;
+  padding: 2%;
+  height: 85px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header h2 {
+  text-transform: uppercase;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header img {
+  max-width: 30px;
+  margin: 0 20px 5px;
+}
+
+/* About Page */
+.about-container {
+  padding: 8%;
+  text-align: left;
+  background-color: #fdf0ff;
+  height: calc(100vh - 85px);
+}
+
+.about-content {
+  padding: 8%;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px rgba(60,60,60,0.2);
+  background-color: #ffffff;
+}
+
+/* 404 Page */
+.not-found-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: calc(80vh);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.not-found-container img {
+  max-width: 250px;
 }
