added Open Sans font

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -11,3 +11,4 @@ $theme-colors: (
 );
 
 @import '~bootstrap/scss/bootstrap.scss';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
