--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@ body {
   background-color: #ffffff;
   color: #2e333f;
   height: calc(100vh);
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3 {
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .App {
