--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,90 @@ header img {
 .not-found-container img {
   max-width: 250px;
 }
+
+/*************************************/
+/********** Game Page ***********/
+/*************************************/
+
+#game-page-container {
+  display: flex;
+  justify-content: stretch;
+  height: calc(100vh - 85px);
+  position: relative;
+}
+
+/*************************************/
+/********** Tools Panel ***********/
+/*************************************/
+
+#tools-panel-container {
+  width: 60px;
+  padding: 10px 0;
+  background-color: #2b3141;
+}
+
+.tools-button {
+  font-size: 22px;
+  cursor: pointer;
+  padding: 15px;  
+  color: #4ec8f1;
+}
+
+.tools-button.selected {
+  background-color: rgba(0,0,0,0.5);
+}
+
+/* Content Flyout */ 
+#content-flyout-container {
+  position: absolute;
+  top: 10px;
+  left: 55px;
+  width: calc(50vw);
+  max-height: calc(70vh);
+  background-color: rgba(43,45,69,1);
+  color: #ffffff;
+  border-radius: 0px 20px 20px 0px;
+  text-align: left;
+  border: 10px solid rgba(43,45,69,0.9);
+  overflow: scroll;
+}
+
+#content-flyout-inner-div {
+  position: relative;
+  padding: 3%;
+}
+
+#close-flyout-button-container {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  font-size: 20px;
+  color:#4ec8f1;
+  cursor: pointer;
+}
+
+.context-header {
+  color: #4ec8f1;
+}
+
+/*************************************/
+/********** Board Panel ***********/
+/*************************************/
+
+#board-panel-container {
+  padding: 25px;
+  width: 100%;
+  overflow: scroll;
+  /*background-image: linear-gradient(to bottom right ,#fdf0ff, #fad6ff);*/
+
+}
+
+/*************************************/
+/********** Progress Panel ***********/
+/*************************************/
+
+#progress-panel-container {
+  width: 25%;
+  padding: 10px;
+  background-color: #2b3141;
+}
