--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,7 @@ header img {
   width: 60px;
   padding: 10px 0;
   background-color: #2b3141;
+  z-index: 100;
 }
 
 .tools-button {
@@ -194,9 +195,9 @@ header img {
 }
 
 #winner-message-container {
-  position: absolute;
+  position: fixed;
   left: 0;
-  top: 0;
+  top: 85px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -313,6 +314,7 @@ header img {
   width: 25%;
   padding: 10px;
   background-color: #2b3141;
+  z-index: 100;
 }
 
 /* New Game button */
