tweaking style changes

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ header img {
 .about-container {
   padding: 8%;
   text-align: left;
-  background-color: #fdf0ff;
+  background-color: #dad0db;
   height: calc(100vh - 85px);
 }
 
