--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,12 @@ header img {
   border-bottom: 5px solid rgba(0,0,0,0.5);
   overflow: scroll;
   z-index: 100;
+  -ms-overflow-style: none;
+  scrollbar-width: none;  
+}
+
+#content-flyout-container::-webkit-scrollbar {
+  display: none;
 }
 
 .context-header {
@@ -154,8 +160,12 @@ header img {
   padding: 25px;
   width: 100%;
   overflow: scroll;
-  /*background-image: linear-gradient(to bottom right ,#fdf0ff, #fad6ff);*/
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 
+#board-panel-container::-webkit-scrollbar {
+  display: none;
 }
 
 /* Welcome view */
@@ -185,8 +195,8 @@ header img {
   overflow: scroll;
   height: 100%;
   margin: 30px auto 5px;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */  
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
 }
 
 #game-board::-webkit-scrollbar {
